best-practices-vpol/restrict-node-port/.kyverno-test/resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-nodeport
  namespace: test
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: badservice01
  namespace: test
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice01
  namespace: test
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice02
  namespace: test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: LoadBalancer
