best-practices-vpol/restrict-node-port/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-node-port
policies:
- ../restrict-node-port.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Service
  policy: restrict-nodeport
  resources:
  - badservice01
  result: fail
  isValidatingPolicy: true
- kind: Service
  policy: restrict-nodeport
  resources:
  - goodservice01
  - goodservice02
  result: pass
- kind: Service
  policy: restrict-nodeport
  resources:
  - exception-nodeport
  result: pass
  isValidatingPolicy: true
